--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="outerContainer">
         <div id="player">
             <h2>Player</h2>
-            <h3 class="gameResult">Winner!</h3>
+            <h3 class="gameResult" id="playerResult">Winner!</h3>
             <hr />
 
             <div class="inventory">
@@ -22,10 +22,11 @@
                 <img src="Images/scissors.png" alt="scissor">
                 <img src="Images/paper.jpg" alt="paper">
             </div>
+            <img class="decision" src="Images/questionMark.jpg" alt="Decision player made">
         </div>
         <div id="computer">
             <h2>Computer</h2>
-            <h3 class="gameResult">Loser!</h3>
+            <h3 class="gameResult" id="computerResult">Loser!</h3>
             <hr />
 
             <div class="inventory">
@@ -36,6 +37,7 @@
                 <img src="Images/scissors.png" alt="scissor">
                 <img src="Images/paper.jpg" alt="paper">
             </div>
+            <img class="decision" src="Images/questionMark.jpg" alt="Decision player made">
         </div>
     </div>
     <script src="script.js"></script>
