--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <div id="outerContainer">
         <div id="player">
             <h2>Player</h2>
-            <h3 class="gameResult" id="playerResult">Winner!</h3>
+            <h3 class="gameResult" id="playerResult"></h3>
             <hr />
 
             <div class="inventory">
                 <p id="playerR">Rock - 5</p>
                 <p id="playerP">Paper - 5</p>
                 <p id="playerS">Scissors - 5</p>
-                <img src="Images/rock.jpg" onclick="playerSelect('rock')" alt="rock">
-                <img src="Images/paper.jpg" onclick="playerSelect('paper')" alt="paper">
-                <img src="Images/scissors.png" onclick="playerSelect('scissors')" alt="scissor">
+                <img src="Images/rock.jpg" onclick="playerSelect('rock')" alt="rock" class="playerImg">
+                <img src="Images/paper.jpg" onclick="playerSelect('paper')" alt="paper" class="playerImg">
+                <img src="Images/scissors.png" onclick="playerSelect('scissors')" alt="scissor" class="playerImg">
             </div>
             <img class="decision" id="playerDecision" src="Images/questionMark.jpg" alt="Decision player made">
         </div>
         <div id="computer">
             <h2>Computer</h2>
-            <h3 class="gameResult" id="computerResult">Loser!</h3>
+            <h3 class="gameResult" id="computerResult"></h3>
             <hr />
 
             <div class="inventory">
@@ -45,20 +45,28 @@
         <div id="rulesContainer">
             <h4>Rules:</h4>
             <ul>
-                <ol>Rule 1</ol>
-                <ol>Rule 2</ol>
+                <ol>Each player begins with 5 of each weapon(rock, paper, scissor)</ol>
+                <ol>Click on their respective images to play your weapon</ol>
+                <ol>The computer will be picking a random weapon</ol>
+                <ol>Both players can't pick a weapon that has a supply of 0</ol>
+                <ol>If you win your round, you keep your weapon and the computer's weapon is added to your supply</ol>
+                <ol>If the computer wins the round, it keeps their weapon and it gets your weapon added to its supply</ol>
+                <ol>If either player is to play the same weapon 3 times in a row, that weapon will not be counted towards the round and will be removed from the game</ol>
+                <ol>There is to the right of this rules page that tracks each round</ol>
+                <ol>Once the game ends, there will be a message at the top that says who won and who lost</ol>
+                <ol>There is a reset button to reset the game.</ol>
             </ul>
         </div>
 
         <div id="logContainer">
             <h4>Log:</h4>
             <p id="gameLog">
-                test
+                
             </p>
         </div>
         
         <div id="resetContainer">
-            <button id="resetButton">Reset</button>
+            <button id="resetButton" onclick="reset();">Reset</button>
         </div>
     </div>
 
